# predifoot

./: .gitignore  README.md  config_exemple.yaml  generer_grilles.py  pyproject.toml  remplir_grilles.py
