[project]
name = "predifoot"
authors = [
    {name = "Clément GITTEAU"},
    {name = "Sidney GITTEAU"},
]
version = "0.1.0"
description = "Automatisation de l'élaboration et du remplissage des grilles Loto Foot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black>=24.10.0",
    "click>=8.1.8",
    "loguru>=0.7.3",
    "pandas>=2.2.3",
    "pyyaml>=6.0.2",
    "selenium>=4.27.1",
]

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120
target-version = ["py312"]
